@@ -32,7 +32,7 @@ from twisted.spread.jelly import setUnjellyableForClass
 from zope.interface import implements
 
 from flumotion.common import log
-from flumotion.common.errors import MissingDependencyError, AccessDeniedError
+from flumotion.common.errors import AccessDeniedError
 from flumotion.common.interfaces import IDirectory, IFile
 
 
